# job-board-automation

./: README.md  pyproject.toml
auto_apply_collab/ats/: __tweaks__.py  config.py  tweaks.py  tweaks_tst.py
auto_apply_collab/ats/_scripts/: _apply_job.py  _auto_answer_aq.py  _create_new_cookies.py  _find_job_with_aq.py  _full_run.py  _parse_aq.py  answers.json  apply_cookies.json  aq_cookies.json  describe.py  questions.json  urls.txt
auto_apply_collab/ats/common/: __tweaks__.py  _ats_config.py  annotations_.py  ats_common_logger.py  ats_common_utils.py  config.py  exceptions_.py  models_.py  retry_template.py  tweaks.py  tweaks_tst.py  types_.py  utils.py
auto_apply_collab/ats/template/: __ats_register__.py  adapter.py  describe.py  store.py  template.py  template_utils.py
