[tool.poetry]
name = "auto-apply-collab"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "auto_apply_collab"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^3"
webdriver-manager = "^3.8.5"
pandas = "^1.5.2"
jupyter = "^1.0.0"
pyperclip = "^1.8.2"
pydantic = "^1.10.2"
pytest = "^7.2.0"
sqlmodel = "^0.0.8"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
